Translate the Linkcast webpage

--- a/plugin.program.remote.control.browser/resources/data/close.html
+++ b/plugin.program.remote.control.browser/resources/data/close.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Kodi Linkcast</title>
+        <title>{{TITLE_HTML}}</title>
         <script>
             window.close();
         </script>
