--- a/plugin.program.remote.control.browser/resources/data/index.html
+++ b/plugin.program.remote.control.browser/resources/data/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Kodi Linkcast</title>
+        <title>{{TITLE_HTML}}</title>
         <style>
             body {
                 background-color: black;
@@ -10,6 +10,11 @@
             }
             div {
                 margin: 2em 0;
+            }
+            #status {
+                color: black;
+                background-color: #CCC;
+                padding: 0.5em 1em;
             }
             #url {
                 width: 20em;
@@ -28,19 +33,20 @@
         </style>
     </head>
     <body>
-        <h1>Kodi Linkcast</h1>
-        <h2>Remote Control Browser Addon</h2>
+        <h1>{{TITLE_HTML}}</h1>
+        <h2>{{SUBTITLE_HTML}}</h2>
 
+{{STATUS}}
         <div>
             <form action="/linkcast.html" method="POST">
-            <input id="url" type="url" name="url" />
-            <input type="submit" value="Linkcast" />
+            <input id="url" type="url" name="url" value="{{URL_ATTR}}" />
+            <input type="submit" value="{{SUBMIT_ATTR}}" />
             </form>
         </div>
 
         <div id="placeholder">
-            <p>Drag this bookmarklet to the bookmarks bar and then you can use it to linkcast your current webpage:</p>
-            <div><a id="bookmarklet">Kodi Linkcast</a></div>
+            <p>{{INSTRUCTIONS_HTML}}</p>
+            <div><a id="bookmarklet">{{TITLE_HTML}}</a></div>
         </div>
 
         <script type="text/template" id="template">
@@ -63,16 +69,20 @@
                     window.open(location);
                     break;
                 default:
-                    window.alert('Kodi Linkcast does not support scheme: ' + window.document.location.href);
+                    var message = {{UNSUPPORTED_SCHEME_CSTR}}.replace(/%(%|\(url\)s)/g,
+                        function(match, p1) {
+                            return (p1 === '%') ? '%' : window.document.location.href;
+                        });
+                    window.alert(message);
                     break;
                 }
-            })({{PARAMS}}))
+            })({{LEFT_CURLY_BRACKET}}PARAMS{{RIGHT_CURLY_BRACKET}}))
         </script>
 
         <script>
             var template = window.document.getElementById('template').innerHTML;
             var params = JSON.stringify({'origin': window.location.origin})
-            var expanded = template.replace(/{{PARAMS}}/g, params);
+            var expanded = template.replace(/{{LEFT_CURLY_BRACKET}}PARAMS{{RIGHT_CURLY_BRACKET}}/g, params);
 
             var bookmarklet = window.document.getElementById('bookmarklet');
             bookmarklet.href = 'javascript:' + expanded
